Fixes spacing in bio (for mobile)

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -16,7 +16,7 @@ span {
 }
 
 #bio {
-  text-align: justify;
+  text-align: center;
   text-align-last: center;
   border: 5px solid black;
   margin: 2rem;
